Stop images in ooc and notes overflowing bounds

--- a/styles/forums.less
+++ b/styles/forums.less
@@ -475,6 +475,14 @@
 			max-width: 684px;
 			margin: .5em 0;
 		}
+
+		.post .oocText img{
+			max-width: 664px;
+
+		}
+		.post .note img{
+			max-width: 648px;
+		}
 	}
 
 	.postRight {
